--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -12,40 +12,18 @@
     android:padding="4dp">
 
     <TextView
-        android:id="@+id/personNameView"
+        android:id="@+id/userNameView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:background="#FFFFFF" />
 
     <TextView
-        android:id="@+id/personAdressView"
+        android:id="@+id/userAgeView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_weight="1"
         android:background="#FFFFFF" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/personSexView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:background="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/personAgeView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#FFFFFF" />
-
-    </LinearLayout>
 
 
 </LinearLayout>
