--- a/app/src/main/res/menu/menu_save.xml
+++ b/app/src/main/res/menu/menu_save.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.dr0gi.example2.MainActivity">
     <item
-        android:id="@+id/button_add"
+        android:id="@+id/button_save"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/button_save"
         app:showAsAction="ifRoom" />
 </menu>
